syntax = "proto3";

package paymentchecker;

option go_package = "internal/adapter/grpcapi;grpcapi";


message ValidatePaymentRequest {
  string provider = 1;
  int64 amount = 2;
  string currency = 3;
  string date = 4;
}


message ValidatePaymentResponse {
  bool allowed = 1;
  int64 total_rub_in_kopecks = 2;
  string reason = 3;
}


service PaymentChecker {
  rpc Validate(ValidatePaymentRequest) returns (ValidatePaymentResponse);
}
